# BookLib

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: events.py
app/core/settings/: app.py
app/db/: database.py  events.py
app/db/migrations/: env.py
app/db/migrations/versions/: af331f59bbf3_initial_migration.py
app/users/: models.py
